--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
+    "react-select": "^2.4.1",
     "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
