--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
     "redux": "^4.0.1",
