--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "styled-components": "^4.1.3",
     "styled-icons": "^7.4.0"
   },
