--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-select": "^2.4.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
     "styled-icons": "^7.4.0"
   },
