Form divided to smaller components. Edit income container improvments

--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^5.15.1",
+    "eslint-loader": "^2.1.2"
+  }
 }
