--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
@@ -34,7 +36,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.15.1",
     "eslint-loader": "^2.1.2"
   }
 }
