--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.9.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
@@ -12,10 +13,12 @@
     "react-dom": "^16.8.3",
     "react-pose": "^4.0.8",
     "react-redux": "^6.0.1",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
     "redux": "^4.0.1",
+    "redux-firestore": "^0.7.2",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
@@ -37,6 +40,18 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-loader": "^2.1.2"
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-wesbos": "0.0.19",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.1",
+    "prettier": "^1.16.4"
   }
 }
