--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
-    "styled-icons": "^7.4.0"
+    "styled-icons": "^7.4.0",
+    "styled-system": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
